[tool.poetry]
name = "yggdrasil-py"
version = "0.1.0"
description = ""
authors = ["Link Dupont <link@sub-pop.net>"]

[tool.poetry.dependencies]
python = "^3.6"
PyGObject = "^3.38.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
autopep8 = "^1.5.4"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
